# hela_qc_mnt_data

./: README.md  environment.yml  setup.cfg  test_pkg.py
project/: 00_0_0_lftp_upload_commands.ipynb  00_0_0_lftp_upload_commands.py  00_0_1_check_filesizes.ipynb  00_0_hela_metadata_rawfiles.ipynb  00_0_hela_metadata_rawfiles.py  00_1_hela_MQ_summaries.ipynb  00_1_hela_MQ_summaries.py  00_2_hela_all_raw_files.ipynb  00_2_hela_all_raw_files.py  00_3_0_pride_metadata_creation.py  00_3_1_pride_metadata_analysis.ipynb  00_3_1_pride_metadata_analysis.py  00_4_development_dataset_support.ipynb  00_4_development_dataset_support.py  00_4_hela_development_dataset_splitting.ipynb  00_4_hela_development_dataset_splitting.py  00_5_development_dataset_support.ipynb  00_6_hela_training_data_exploration.ipynb  00_6_hela_training_data_exploration.py  README.md  Snakefile  erda_00_maxquant_file_reader.ipynb  erda_00_maxquant_file_reader.py  erda_01_mq_select_runs.ipynb  erda_01_mq_select_runs.py  erda_02_mq_count_features.ipynb  erda_02_mq_count_features.py  erda_03_training_data.ipynb  erda_03_training_data.py  erda_04_transpose_file.ipynb  erda_04_transpose_file.py  erda_05_parse_paramter_files.ipynb  erda_05_parse_paramter_files.py  erda_06_analyze_parameters.ipynb  erda_06_analyze_parameters.py  erda_12_explore_raw_MQ_data.ipynb  erda_12_explore_raw_MQ_data.py  erda_data_available.ipynb  erda_data_available.py  misc_FASTA_data_agg_by_gene.ipynb  (+9 more)
project/config/: README.md  __init__.py  eligable_files.yaml  (+2 more)
test/: test_fasta.py  test_pandas.py  test_pkg.py
workflows/: README.md
(+31 files in other folders)
