[metadata]
name = hela-data
version = attr:hela_data.__version__
description = Functionality for MaxQuant data processiong of text outputs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RasmussenLab/hela_qc_mnt_data
author = Henry Webel
author_email = "Henry Webel" <henry.webel@cpr.ku.dk>
license = gpl-3.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
[options]
python_requires = >=3.9
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    numpy
    matplotlib
    pandas
    plotly
    seaborn
    fastcore
    omegaconf
    ipywidgets
    ipykernel
    tqdm
    pyyaml
    openpyxl
    xmltodict
    requests
    umap-learn
    scikit-learn

[options.extras_require]
docs =
    sphinx
    sphinx-book-theme
    myst-parser


[options.packages.find]
where = src
exclude =
    test*


######################
# Tool configuration #
######################

[flake8]
max-line-length = 120
aggressive = 2


[tool:pytest]
testpaths = test
addopts = --cov --strict-markers
xfail_strict = True

[coverage:run]
source = hela_data
branch = True

[coverage:report]
show_missing = True
skip_covered = True
